--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rmda.github.io/todo",
   "dependencies": {
     "gh-pages": "^3.1.0",
     "react": "^16.14.0",
@@ -29,6 +30,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://rmda.github.io/todo"
+  }
 }
